--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame 
-       	Remove this if you use the .htaccess -->
-  		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 		<title>Mash Up</title>
 		<meta name="description" content="Mash up application for the course 1DV449">
@@ -13,12 +10,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<link rel="stylesheet" type="text/css" href="./style/style.css">
-		<!-- Include Google Maps Javascript Library -->
-		<script type="text/javascript" 
-		src="http://maps.google.com/maps?file=api&v=1& key=
-		AIzaSyAKZado-g6N6fsnObhXOt4gjbeIdDbQbTk"></script>
 
 		<!-- Kan va bra ? -->
+		<!-- 
 		<script type="text/javascript">
 			
 			function retrieveExternalData()
@@ -29,6 +23,7 @@
 				document.body.appendChild(script);
 			}
 		</script>
+		-->
 	</head>
 
 	<body> 
@@ -39,11 +34,15 @@
 			
 			<div id="content">
 				<!-- div to hold map -->
-	    	<div id="map" ></div>
+	    		<div id="map" ></div>
 			</div>
 			
 			<div id="footer">
 				<p>Footer!</p>
+				<!-- Include Google Maps Javascript Library -->
+				<script src="http://maps.googleapis.com/maps/api/js?v=3.22&key=AIzaSyDiFvHbePq1mbzwQPCV9GoG1VgZev7BU4A"></script>
+
+				<!-- Get the map -->
 				<script type="text/javascript" src="./script/mapFunctions.js"></script>
 			</div>
 			
