Fixat kartan, kan hämta xml

--- a/index.html
+++ b/index.html
@@ -40,10 +40,16 @@
 			<div id="footer">
 				<p>Footer!</p>
 				<!-- Include Google Maps Javascript Library -->
-				<script src="http://maps.googleapis.com/maps/api/js?v=3.22&key=AIzaSyDiFvHbePq1mbzwQPCV9GoG1VgZev7BU4A"></script>
+				<script src="http://maps.googleapis.com/maps/api/js?&key=AIzaSyDiFvHbePq1mbzwQPCV9GoG1VgZev7BU4A"></script>
 
 				<!-- Get the map -->
 				<script type="text/javascript" src="./script/mapFunctions.js"></script>
+
+				<!-- JQuery -->
+				<script language="JavaScript" type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+
+				<script type="text/javascript" src="./script/xmlFunctions.js"></script>
+
 			</div>
 			
 		</div>
