Kan göra en lista med xml

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 			</div>
 			
 			<div id="content">
+				<div id="accidentList">
+				</div>
+				
 				<!-- div to hold map -->
 	    		<div id="map" ></div>
 			</div>
