--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<script type="text/javascript" src="./script/mapFunctions.js"></script>
 
 				<!-- JQuery -->
-				<script language="JavaScript" type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+				<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
 
 				<script type="text/javascript" src="./script/xmlFunctions.js"></script>
 
